# tableau_langchain

./: .env.template  .gitignore  AGENT_DATASOURCE_ANALYSIS.md  AGENT_DEMO_GUIDE.md  AGENT_FIXES_APPLIED.md  AGENT_FIXES_REQUIRED.md  AGENT_SIMPLIFICATION_SUMMARY.md  CLAIMS_QUESTIONS_FIXED.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  OPTIMIZATION_SUMMARY.md  Procfile  QUICK_REFERENCE.md  QUICK_START.md  README.md  SAMPLE_QUESTIONS_FIX.md  SECURITY_SETUP.md  URGENT_COST_ANALYSIS.md  app.json  basic_agent.ipynb  basic_tableau_agent.ipynb  check_datasource_metadata.py  check_metadata_raw.py  check_test_progress.py  datasource_qa.ipynb  environment.yml  find_base_fields.py  find_queryable_fields.py  inspect_datasource_fields.py  lanchain-tableau_cookbook_01.ipynb  langgraph.json  login.py  main.py  multitool_agent.ipynb  network.html  pyproject.toml  query_agent.ipynb  quick_test.py  rag_demo.py  (+18 more)
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
agent/: graph.py  main.py  nodes.py  state.py  state_graph.py  tools.py  utils.py
agents/: cra.py  tools.py  utils.py
agents/chatbot/: agent.py  graph.py  nodes.py  state.py  tooling.py
agents/cra/: agent.py  memory.py  prompt.py  state.py  tooling.py
agents/research_agent/: agent.py  nodes.py  state.py
agents/tableau/: utils.py
agents/tableau/chatbot/: agent.py  graph.py  nodes.py  tooling.py
agents/tableau/research_agent/: agent.py  graph.py  nodes.py
agents/utils/: agent_utils.py  tableau.py
chains/query_data_chain/: dash_search.py  dash_search_flask.py  main.py  rag_demo.py  search_demo.py  site_graphql_change.py
chains/query_data_chain/modules/: chain_config.py  headless.py  metadata.py  serve.py  toolchain.py
chains/query_data_chain/static/: styles.css
chains/query_data_chain/templates/: results.html  search.html
community/tools/tableau/: prompts.py  query_data.py
community/utilities/tableau/: query_data.py
experimental/agents/: retrievers.py  shared_state.py  tools.py
experimental/agents/cra/: agent.py  prompt.py
experimental/agents/create_react_agent/: agent.py  tooling.py
experimental/agents/cumulus/: agent.py  prompt.py  tooling.py
experimental/agents/experimental/: agent.py  prompt.py  tooling.py
experimental/agents/keynote/: agent.py  prompt.py  tooling.py
experimental/agents/makana/: agent.py  prompt.py  tooling.py
experimental/agents/omnicell/: agent.py  prompt.py  tooling.py
experimental/agents/research_agent/: tooling.py
experimental/agents/superstore/: agent.py  prompt.py  tooling.py
experimental/agents/utils/: agent_utils.py  mcp_agent.py  other.py  search_agent_utils.py  tableau.py
experimental/chains/search_datasources/: rag_demo.py  rag_demo_flask.py  (+1 more)
experimental/demos/: rag_demo.py  rag_demo_flask.py  server_demo.py  server_rag_demo.py  server_similar_datasources.py  server_vector_db_utils.py  similar_datasources_report.py  style_guide.py  test_mcp_selection.py  vectorstore.py
experimental/notebooks/: 00_setup.ipynb  01_intro_to_langgraph.ipynb  01_setup.ipynb  02_intro_to_langgraph.ipynb  02_tableau_datasource_qa.ipynb  03_tableau_datasource_qa.ipynb  03_tableau_file_system.ipynb  03_tableau_vectorsearch.ipynb  04_tableau_file_system.ipynb  04_tableau_slack.ipynb  05_tableau_salesforce.ipynb  05_tableau_slack.ipynb  api_test.ipynb  calc_test.ipynb  eval_notebook.ipynb  lanchain-tableau_cookbook_01.ipynb  multitool_agent.ipynb
experimental/tools/: calc_prompt.py  calculate.py  datasource_qa.py  prompts.py  search_datasource.py  simple_datasource_qa.py  tableau_mcp_tool.py
experimental/utilities/: auth.py  calc-functions.csv  datasource_qa.py  ip_blocker.py  mcp_client.py  mcp_tools_dynamic.py  metadata.py  models.py  monitor_usage.py  search_datasources.py  secure_models.py  security.py  setup_local_vector_db.py  similar_datasources.py  simple_datasource_qa.py  smart_tool_wrapper.py  tableau_server_client.py  vizql_data_service.py
jupyter_test/: datasource_qa_joseph.ipynb  tc25_test.ipynb
notebooks/: DF_Europe.ipynb  query_data.ipynb  testing HBI GA endpoints.ipynb
pip_package/: README.md  __init__.py  deploy.sh  notes.txt  pyproject.toml  setup.py
pip_package/langchain_tableau/: __init__.py  main.py
pip_package/langchain_tableau/tools/: simple_datasource_qa.py
pip_package/langchain_tableau/utilities/: auth.py  utils.py
pkg/: .env.template  README.md  deploy.sh  pyproject.toml
pkg/langchain_tableau/: license_file.txt
pkg/langchain_tableau/tools/: prompts.py  simple_datasource_qa.py  tableau_mcp_tool.py
pkg/langchain_tableau/utilities/: analyze_data.py  auth.py  mcp_client.py  metadata.py  models.py  simple_datasource_qa.py  vizql_data_service.py
tab_agent-extension/: script.js  tab_agent.trex
tableau_langchain/notebooks/: agent_with_tool.ipynb
tools/queryData/: rag_demo.py
tools/query_data/: main.py
tools/tableau/: getDataTool.py  prompts.py  query_data.py  search_datasources.py
utilities/tableau/: hbiQuery.py  readMetadata.py  setPrompt.py
(+97 files in other folders)
